--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "postgres": "^3.3.4"
   }
 }
